--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Welcome to our platform! Ask the chatbot about hazardous chemicals and their eco-friendly alternatives.</p>
 
         <!-- Embedding the chatbot using an iframe -->
-        <iframe src="https://your-gradio-link" width="100%" height="600" frameborder="0"></iframe>
+        <iframe src="https://lmarena.ai/" width="100%" height="600" frameborder="0"></iframe>
     </section>
 
     <footer>
