--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="relative w-96 h-64 flex items-center justify-center mx-auto mt-10 rounded-3xl overflow-hidden">
             <img src="/photos/pic_1.jpg" alt="" class="w-full h-full object-cover">
-            <p class="absolute inset-0 flex items-center justify-center text-white text-xl font-bold bg-black bg-opacity-50">
+            <p class="absolute inset-0 flex items-center justify-center text-white text-xl font-bold bg-black bg-opacity-50 p-10">
                 For the crazy does not need to hazardous 
                 <br />-Rishika Ray (author)
             </p>
