--- a/chatbot.html
+++ b/chatbot.html
@@ -13,7 +13,7 @@
     <section class="flex flex-col items-center justify-center p-10 ">
         <p class="text-lg text-gray-800 mb-4">Ask the chatbot about hazardous chemicals and their eco-friendly alternatives.</p>
         <!-- Embedding the chatbot using an iframe -->
-        <iframe src="https://lmarena.ai/" class="w-full max-w-4xl h-96 rounded-lg border-4 border-green-300 shadow-lg"></iframe>
+        <iframe src="https://c023-202-131-155-130.ngrok-free.app" class="w-full max-w-4xl h-96 rounded-lg border-4 border-green-300 shadow-lg"></iframe>
     </section>
 
     <footer class="bg-green-600 text-white text-center p-4">
