--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
         <!-- Add some images/icons -->
         <div class="relative z-10 mt-12 flex flex-wrap justify-center gap-8">
-            <img src="/photos/pic_4.jpeg" alt="Eco-friendly" class="w-32 h-32 object-cover rounded-lg shadow-md">
-            <img src="/photos/pic_6.jpeg" alt="Chemical Alternatives" class="w-32 h-32 object-cover rounded-lg shadow-md">
-            <img src="/photos/pic_7.jpeg" alt="Sustainability" class="w-32 h-32 object-cover rounded-lg shadow-md">
+            <img src="photos/pic_4.jpeg" alt="Eco-friendly" class="w-32 h-32 object-cover rounded-lg shadow-md">
+            <img src="photos/pic_6.jpeg" alt="Chemical Alternatives" class="w-32 h-32 object-cover rounded-lg shadow-md">
+            <img src="photos/pic_7.jpeg" alt="Sustainability" class="w-32 h-32 object-cover rounded-lg shadow-md">
         </div>
     </section>
 
