--- a/index.html
+++ b/index.html
@@ -36,26 +36,26 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Feature 1 -->
                 <div class="p-6 bg-gray-50 rounded-lg shadow-md hover:shadow-lg transition-all">
-                    <img src="/photos/pic_8.jpeg" alt="Fast Access" class="mx-auto mb-4">
+                    <img src="photos/pic_8.jpeg" alt="Fast Access" class="mx-auto mb-4">
                     <h4 class="text-2xl font-semibold mb-2">Fast Access to Data</h4>
                     <p class="text-gray-700">Get instant information on hazardous chemicals and their eco-friendly alternatives at your fingertips.</p>
                 </div>
                 <!-- Feature 2 -->
                 <div class="p-6 bg-gray-50 rounded-lg shadow-md hover:shadow-lg transition-all">
-                    <img src="/photos/pic_9.jpeg" alt="Eco-Friendly" class="mx-auto mb-4">
+                    <img src="photos/pic_9.jpeg" alt="Eco-Friendly" class="mx-auto mb-4">
                     <h4 class="text-2xl font-semibold mb-2">Eco-Friendly Alternatives</h4>
                     <p class="text-gray-700">Find safer, sustainable alternatives to protect the environment and ensure safety.</p>
                 </div>
                 <!-- Feature 3 -->
                 <div class="p-6 bg-gray-50 rounded-lg shadow-md hover:shadow-lg transition-all">
-                    <img src="/photos/pic_10.jpeg" alt="Safe for You" class="mx-auto mb-4">
+                    <img src="photos/pic_10.jpeg" alt="Safe for You" class="mx-auto mb-4">
                     <h4 class="text-2xl font-semibold mb-2">Safe for You and the Planet</h4>
                     <p class="text-gray-700">All alternatives are selected with the well-being of the environment and public health in mind.</p>
                 </div>
             </div>
         </div>
         <div class="relative w-96 h-64 flex items-center justify-center mx-auto mt-10 rounded-3xl overflow-hidden">
-            <img src="/photos/pic_1.jpg" alt="" class="w-full h-full object-cover">
+            <img src="photos/pic_1.jpg" alt="" class="w-full h-full object-cover">
             <p class="absolute inset-0 flex items-center justify-center text-white text-xl font-bold bg-black bg-opacity-50 p-10">
                 For the crazy does not need to hazardous 
                 <br />-Rishika Ray (author)
