--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <!-- Hero Section with Background Image -->
-    <section class="relative flex flex-col items-center justify-center h-screen bg-cover bg-center" style="background-image: url('/photos/pic_3.jpg');">
+    <section class="relative flex flex-col items-center justify-center h-screen bg-cover bg-center" style="background-image: url('photos/pic_3.jpg');">
         <div class="absolute inset-0 bg-green-900 bg-opacity-50"></div> <!-- Overlay to improve text readability -->
 
         <div class="relative z-10 text-center">
